perf: Optimize Google Fonts loading by moving from CSS `@import` to async HTML `<link>` tags.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
 
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <link rel="stylesheet" href="css/style.css">
+    <!-- Google Fonts: async load to avoid render-blocking chain -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+        media="print" onload="this.media='all'">
+    <noscript>
+        <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
+    </noscript>
 
     <!-- Icons -->
     <!-- Font Awesome: async load to avoid render-blocking -->
