added project details + fix

--- a/index.html
+++ b/index.html
@@ -255,13 +255,13 @@
                     </article>
                     <article>
                         <h3>Social Networks Analysis</h3>
-                        <p>Data cleaning, visualization, and scientific writing using R. Analysis of complex network
-                            structures.</p>
+                        <p>Influence of competitive structures on Data Science salary levels — a Social Network Analysis
+                            using R (igraph, visNetwork, ggplot2).</p>
                     </article>
                     <article>
-                        <h3>Rotten Tomatoes Clone</h3>
-                        <p>Development of a complete database architecture for review aggregation. Introduction to
-                            relational databases and SQL programming.</p>
+                        <h3>Bitter Melons — Review Aggregation DB</h3>
+                        <p>An independent alternative to Rotten Tomatoes: a BCNF-normalized database architecture for
+                            aggregating critic and user reviews.</p>
                     </article>
                     <article>
                         <h3>Corporate Website markzeitler.de</h3>
@@ -273,9 +273,9 @@
                             project management (Scrum) and Next.js.</p>
                     </article>
                     <article>
-                        <h3>Data Analysis &amp; Visualization</h3>
-                        <p>Data analysis project including scientific paper and creation of an interactive dashboard
-                            with Streamlit and Python.</p>
+                        <h3>Germany's Role in MotoGP</h3>
+                        <p>Data visualization project analyzing Germany's performance in MotoGP motorcycle racing
+                            compared to dominant nations like Spain and Italy.</p>
                     </article>
                 </noscript>
             </main>
