--- a/project-detail.html
+++ b/project-detail.html
@@ -237,18 +237,24 @@
         }
 
         .detail-footer-icon {
-            font-size: 1.5rem;
+            width: 48px;
+            height: 48px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.25rem;
             color: var(--text-secondary);
-            transition: all 0.2s;
-            padding: 0.8rem;
-            border-radius: 50%;
-            background: var(--card-bg);
-            border: 1px solid var(--card-border);
+            transition: all 0.25s ease;
+            border-radius: 12px;
+            background: rgba(255, 255, 255, 0.06);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            text-decoration: none;
         }
 
         .detail-footer-icon:hover {
             color: var(--text-primary);
-            border-color: var(--text-secondary);
+            background: rgba(255, 255, 255, 0.12);
+            border-color: rgba(255, 255, 255, 0.2);
             transform: translateY(-2px);
         }
 
